[package]
name = "dev-chaos"
version = "0.9.3"
edition = "2021"
rust-version = "1.85"
readme = "README.md"
license = "Apache-2.0"

authors = [
    "James Gober <me@jamesgober.com>"
]

description = "Failure injection and recovery testing for Rust. Disk faults, network failures, panics. Part of the dev-* verification suite."

keywords = [
    "chaos",
    "failure-injection",
    "recovery",
    "verification",
    "ai-tools"
]

categories = [
    "development-tools",
    "development-tools::testing",
    "development-tools::debugging"
]

documentation = "https://docs.rs/dev-chaos"
repository = "https://github.com/jamesgober/dev-chaos"
homepage = "https://github.com/jamesgober/dev-chaos"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
dev-report = { version = "0.9", path = "../dev-report" }
tokio = { version = "1", optional = true, default-features = false, features = ["io-util", "macros"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "rt"] }

[features]
default = []
async-io = ["dep:tokio"]

[profile.release]
opt-level = 3
lto = "thin"
